# atlas-ai-GabrielF

./: .gitignore  Modelfile  README.md  pyproject.toml  requirements.txt  setup-atlas.ps1  setup-atlas.sh
atlas/: config.py  guardrails.py  llm.py  memory.py  monitoring.py
config/: atlas.yml  default.yml
docs/: architecture.md  monitoring.md  setup.md
scripts/: analyze_traces.py  atlas_chat.py  setup-atlas.ps1  setup-atlas.sh
