[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Prototype d'assistant IA 100% on-premise pour ATLAS Consulting"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.2",
    "chromadb>=1.5",
    "pandas>=3.0",
    "matplotlib>=3.10",
    "rich>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "respx>=0.23",
    "ruff>=0.15",
    "mypy>=2.0",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["atlas"]

[project.scripts]
atlas-chat = "scripts.atlas_chat:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true