[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Prototype d'assistant IA 100% on-premise pour ATLAS Consulting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "pyyaml>=6.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.2",
    "chromadb>=1.5",
    "pandas>=3.0",
    "matplotlib>=3.10",
    "rich>=15.0",
]

[project.scripts]
atlas-chat = "scripts.atlas_chat:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "respx>=0.23",
    "ruff>=0.15",
    "mypy>=2.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.setuptools]
package-dir = {"" = "."}